2006-01-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* configure.in (--enable-std-string): New option.

	* flower/std-string.cc: 
	* flower/include/std-string.hh: New file.

	* flower/file-name.cc[STD_STRING]:
	* flower/include/file-name.hh[STD_STRING]: Use it.

2006-01-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-markup-commands.scm (with-dimensions):
	with-dimensions markup command.

	* input/test/font-table.ly: use it.

	* lily/open-type-font.cc (glyph_list): new function.

	* lily/open-type-font-scheme.cc (LY_DEFINE): ly:otf-glyph-list function.

	* lily/ttf.cc: remove ly:font-glyph-list scheme function

2006-01-22  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* ly/music-functions-init.ly (parallelMusic): new music function for parallel
	music entry.

	* scm/define-music-properties.scm (all-music-properties): new 'void music property

	* scm/music-functions.scm (ly:music-message): make public, to be
	used in music function definitions

	* scm/lily-library.scm (collect-music-for-book): discard music
	when the 'void property is set.

2006-01-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/ttf.cc (LY_DEFINE): store name before destroying face.

	* mf/GNUmakefile: idem.

	* buildscripts/mf-to-table.py (help): excise fetaXXlist.ly support.

	* stepmake/bin/install.py (dest): Only chmod/chown just created directories

	* Documentation/user/notation-appendices.itely (The Feta font):
	use it.

	* input/test/font-table.ly: new file. Generate font table within lily.

	* Documentation/user/notation-appendices.itely (The Feta font):
	use new font-table.ly file. 

	* stepmake/stepmake/install-out-targets.make
	(local-install-outfiles): only create directory if
	$(INSTALLATION_OUT_DIR) is defined. This fixes install on Gentoo.

2006-01-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/ttf.cc (LY_DEFINE): new function ly:font-glyph-list.

	* VERSION (PACKAGE_NAME): release 2.7.28

	* scm/framework-ps.scm (write-preamble): use it to pick exactly